[gd_scene load_steps=134 format=3 uid="uid://cas4xwppptdh3"]

[ext_resource type="Script" uid="uid://bunhtxtyir0e2" path="res://player.gd" id="1_5vw27"]
[ext_resource type="Script" uid="uid://dfjqw3t0r6xs2" path="res://main.gd" id="1_cegan"]
[ext_resource type="Texture2D" uid="uid://dhuhng61pdgxq" path="res://sprites/moosh/moosh_idle.png" id="2_5vw27"]
[ext_resource type="Texture2D" uid="uid://ce3ipfnsqrkd8" path="res://sprites/moosh/moosh_dp.png" id="2_kek77"]
[ext_resource type="Texture2D" uid="uid://5of51clb1nca" path="res://sprites/moosh/moosh_walk.png" id="3_kek77"]
[ext_resource type="Texture2D" uid="uid://dw5oh5xi6jtud" path="res://sprites/moosh/moosh_kick.png" id="5_2cqfq"]
[ext_resource type="Script" uid="uid://bvme8fepfy203" path="res://states/StateMachine.gd" id="5_4c57u"]
[ext_resource type="Texture2D" uid="uid://b08v2rgw77kfb" path="res://sprites/moosh/moosh_idle_shield.png" id="5_vivmo"]
[ext_resource type="Script" uid="uid://bkdl6xwldntch" path="res://states/StateIdle.gd" id="6_efxa6"]
[ext_resource type="Script" uid="uid://cykhackwv4mfs" path="res://states/StateRun.gd" id="7_efxa6"]
[ext_resource type="Script" uid="uid://c4nwoo3pmb4gt" path="res://StateFall.gd" id="8_dg77c"]
[ext_resource type="Script" uid="uid://cbudgpe0qopp6" path="res://StateJump.gd" id="9_ycdy4"]
[ext_resource type="Script" uid="uid://dqbsge4jn5dls" path="res://StateBlock.gd" id="10_w48qg"]
[ext_resource type="Script" uid="uid://cps7aa2uo118n" path="res://StateNormalKick.gd" id="13_yaehf"]
[ext_resource type="Script" uid="uid://f1xi86p76vc" path="res://StateSpecialDragonpunch.gd" id="14_074og"]
[ext_resource type="Script" uid="uid://6wl2dwnqu7ml" path="res://StateSpecialFireball.gd" id="15_cegan"]
[ext_resource type="Script" uid="uid://5ew108pwwwtm" path="res://attack_hitbox.gd" id="16_82xsv"]
[ext_resource type="Texture2D" uid="uid://vas1phx135u2" path="res://sprites/light.png" id="18_82xsv"]
[ext_resource type="Texture2D" uid="uid://baopmrlhbnt1p" path="res://objects/ui_bg.png" id="19_cegan"]
[ext_resource type="Script" uid="uid://bdavlr4ptygs" path="res://fade_transition.gd" id="20_82xsv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y32ns"]
size = Vector2(24, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq58d"]
atlas = ExtResource("5_vivmo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_seu75"]
atlas = ExtResource("5_vivmo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htxhm"]
atlas = ExtResource("5_vivmo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq2sk"]
atlas = ExtResource("5_vivmo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k2k6"]
atlas = ExtResource("5_vivmo")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rl1p"]
atlas = ExtResource("5_vivmo")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok6jj"]
atlas = ExtResource("5_vivmo")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_facbu"]
atlas = ExtResource("5_vivmo")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1qrp"]
atlas = ExtResource("5_vivmo")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_come4"]
atlas = ExtResource("5_vivmo")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8e4i"]
atlas = ExtResource("5_vivmo")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lmeg"]
atlas = ExtResource("5_vivmo")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cp0l"]
atlas = ExtResource("5_vivmo")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2t1y"]
atlas = ExtResource("5_vivmo")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gngh3"]
atlas = ExtResource("5_vivmo")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n3wm"]
atlas = ExtResource("5_vivmo")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnost"]
atlas = ExtResource("5_vivmo")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnkbs"]
atlas = ExtResource("5_vivmo")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6a44"]
atlas = ExtResource("5_vivmo")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cbny"]
atlas = ExtResource("5_vivmo")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrvbo"]
atlas = ExtResource("5_vivmo")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uypp3"]
atlas = ExtResource("5_vivmo")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c57u"]
atlas = ExtResource("2_kek77")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxa6"]
atlas = ExtResource("2_kek77")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg77c"]
atlas = ExtResource("2_kek77")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycdy4"]
atlas = ExtResource("2_kek77")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w48qg"]
atlas = ExtResource("2_kek77")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vivmo"]
atlas = ExtResource("2_kek77")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cqfq"]
atlas = ExtResource("2_kek77")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaehf"]
atlas = ExtResource("2_kek77")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_074og"]
atlas = ExtResource("2_kek77")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cegan"]
atlas = ExtResource("2_kek77")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_82xsv"]
atlas = ExtResource("2_kek77")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_getpj"]
atlas = ExtResource("2_kek77")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryguw"]
atlas = ExtResource("2_kek77")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d13ii"]
atlas = ExtResource("2_kek77")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u8w0"]
atlas = ExtResource("2_kek77")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0odxb"]
atlas = ExtResource("2_kek77")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lswn8"]
atlas = ExtResource("2_kek77")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6jrf"]
atlas = ExtResource("2_kek77")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuqvo"]
atlas = ExtResource("2_kek77")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsp4k"]
atlas = ExtResource("2_kek77")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7sh"]
atlas = ExtResource("2_5vw27")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir8iy"]
atlas = ExtResource("2_5vw27")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqns4"]
atlas = ExtResource("2_5vw27")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ka3"]
atlas = ExtResource("2_5vw27")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h7mo"]
atlas = ExtResource("2_5vw27")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr8wp"]
atlas = ExtResource("2_5vw27")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjqkl"]
atlas = ExtResource("2_5vw27")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs4d3"]
atlas = ExtResource("2_5vw27")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vxoj"]
atlas = ExtResource("2_5vw27")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei405"]
atlas = ExtResource("2_5vw27")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8dv2"]
atlas = ExtResource("2_5vw27")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nhjh"]
atlas = ExtResource("2_5vw27")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjha6"]
atlas = ExtResource("2_5vw27")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt76g"]
atlas = ExtResource("2_5vw27")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fr6y"]
atlas = ExtResource("2_5vw27")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hxjc"]
atlas = ExtResource("2_5vw27")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxd8"]
atlas = ExtResource("2_5vw27")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u7jv"]
atlas = ExtResource("2_5vw27")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24dk6"]
atlas = ExtResource("2_5vw27")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mryly"]
atlas = ExtResource("2_5vw27")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq1c5"]
atlas = ExtResource("2_5vw27")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ornx7"]
atlas = ExtResource("2_5vw27")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blkrb"]
atlas = ExtResource("5_2cqfq")
region = Rect2(0, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_abqjc"]
atlas = ExtResource("5_2cqfq")
region = Rect2(128, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iyjs"]
atlas = ExtResource("5_2cqfq")
region = Rect2(256, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w656"]
atlas = ExtResource("5_2cqfq")
region = Rect2(384, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e71vb"]
atlas = ExtResource("5_2cqfq")
region = Rect2(512, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnkwl"]
atlas = ExtResource("5_2cqfq")
region = Rect2(640, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vke2r"]
atlas = ExtResource("5_2cqfq")
region = Rect2(768, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uit24"]
atlas = ExtResource("5_2cqfq")
region = Rect2(896, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruth0"]
atlas = ExtResource("5_2cqfq")
region = Rect2(1024, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm4vd"]
atlas = ExtResource("5_2cqfq")
region = Rect2(1152, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjyto"]
atlas = ExtResource("5_2cqfq")
region = Rect2(1280, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm6fg"]
atlas = ExtResource("5_2cqfq")
region = Rect2(1408, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b17eg"]
atlas = ExtResource("5_2cqfq")
region = Rect2(1536, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntx8l"]
atlas = ExtResource("5_2cqfq")
region = Rect2(1664, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uatky"]
atlas = ExtResource("5_2cqfq")
region = Rect2(1792, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqtf5"]
atlas = ExtResource("5_2cqfq")
region = Rect2(1920, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vm84"]
atlas = ExtResource("5_2cqfq")
region = Rect2(2048, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu3dr"]
atlas = ExtResource("5_2cqfq")
region = Rect2(2176, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyx1q"]
atlas = ExtResource("5_2cqfq")
region = Rect2(2304, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dhbp"]
atlas = ExtResource("5_2cqfq")
region = Rect2(2432, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx0wj"]
atlas = ExtResource("5_2cqfq")
region = Rect2(2560, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkkcx"]
atlas = ExtResource("5_2cqfq")
region = Rect2(2688, 0, 127, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnnru"]
atlas = ExtResource("3_kek77")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_540hr"]
atlas = ExtResource("3_kek77")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ip5v"]
atlas = ExtResource("3_kek77")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5dlx"]
atlas = ExtResource("3_kek77")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4wnb"]
atlas = ExtResource("3_kek77")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7plk7"]
atlas = ExtResource("3_kek77")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbwgr"]
atlas = ExtResource("3_kek77")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mj2a"]
atlas = ExtResource("3_kek77")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fshgd"]
atlas = ExtResource("3_kek77")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbrxf"]
atlas = ExtResource("3_kek77")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjt7e"]
atlas = ExtResource("3_kek77")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xo8l"]
atlas = ExtResource("3_kek77")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfyss"]
atlas = ExtResource("3_kek77")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ngjr"]
atlas = ExtResource("3_kek77")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qilgh"]
atlas = ExtResource("3_kek77")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qosj"]
atlas = ExtResource("3_kek77")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjlbh"]
atlas = ExtResource("3_kek77")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfelt"]
atlas = ExtResource("3_kek77")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytlpd"]
atlas = ExtResource("3_kek77")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v765"]
atlas = ExtResource("3_kek77")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8fb0"]
atlas = ExtResource("3_kek77")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma08v"]
atlas = ExtResource("3_kek77")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_d2bti"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seu75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq2sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rl1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok6jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_facbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1qrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_come4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8e4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lmeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cp0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2t1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gngh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n3wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnost")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnkbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6a44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cbny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrvbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uypp3")
}],
"loop": true,
"name": &"block",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg77c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycdy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w48qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vivmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cqfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaehf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_074og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cegan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82xsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_getpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryguw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d13ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u8w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lswn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6jrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsp4k")
}],
"loop": false,
"name": &"dragonpunch",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir8iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ka3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h7mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr8wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjqkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs4d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vxoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei405")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8dv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nhjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjha6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt76g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fr6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hxjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u7jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24dk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mryly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq1c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ornx7")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blkrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iyjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w656")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e71vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnkwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vke2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uit24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruth0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm4vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjyto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm6fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b17eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntx8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uatky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqtf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vm84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu3dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyx1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dhbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx0wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkkcx")
}],
"loop": true,
"name": &"kick",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnnru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_540hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ip5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5dlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4wnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7plk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbwgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mj2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fshgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbrxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjt7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xo8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfyss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ngjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qilgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qosj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjlbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfelt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytlpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v765")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8fb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma08v")
}],
"loop": true,
"name": &"run",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d21ai"]
size = Vector2(24, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yaehf"]
size = Vector2(13.5, 5)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cegan"]
light_mode = 1

[node name="GameController" type="Node2D"]
script = ExtResource("1_cegan")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(571, 302)
collision_mask = 9
script = ExtResource("1_5vw27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(-7, 2)
shape = SubResource("RectangleShape2D_y32ns")
debug_color = Color(0, 0.6, 0.69803923, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
position = Vector2(-6.999998, 1.9999999)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_d2bti")
animation = &"kick"
autoplay = "block"
frame_progress = 0.85763276

[node name="feets" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/feets"]
position = Vector2(-7, 11)
shape = SubResource("RectangleShape2D_d21ai")

[node name="StateMachine" type="Node" parent="player"]
script = ExtResource("5_4c57u")
metadata/_custom_type_script = "uid://bvme8fepfy203"

[node name="StateIdle" type="Node" parent="player/StateMachine"]
script = ExtResource("6_efxa6")
metadata/_custom_type_script = "uid://bkdl6xwldntch"

[node name="StateRun" type="Node" parent="player/StateMachine"]
script = ExtResource("7_efxa6")
metadata/_custom_type_script = "uid://cykhackwv4mfs"

[node name="StateFall" type="Node" parent="player/StateMachine"]
script = ExtResource("8_dg77c")
metadata/_custom_type_script = "uid://c4nwoo3pmb4gt"

[node name="StateJump" type="Node" parent="player/StateMachine"]
script = ExtResource("9_ycdy4")
metadata/_custom_type_script = "uid://cbudgpe0qopp6"

[node name="StateBlock" type="Node" parent="player/StateMachine"]
script = ExtResource("10_w48qg")
metadata/_custom_type_script = "uid://dqbsge4jn5dls"

[node name="StateNormalKick" type="Node" parent="player/StateMachine"]
script = ExtResource("13_yaehf")
metadata/_custom_type_script = "uid://cps7aa2uo118n"

[node name="StateSpecialDragonpunch" type="Node" parent="player/StateMachine"]
script = ExtResource("14_074og")
metadata/_custom_type_script = "uid://f1xi86p76vc"

[node name="StateSpecialFireball" type="Node" parent="player/StateMachine"]
script = ExtResource("15_cegan")
metadata/_custom_type_script = "uid://6wl2dwnqu7ml"

[node name="attack_hitbox" type="Area2D" parent="player"]
scale = Vector2(0.99999994, 0.99999994)
script = ExtResource("16_82xsv")

[node name="kick" type="CollisionShape2D" parent="player/attack_hitbox"]
position = Vector2(11.25, 3)
shape = SubResource("RectangleShape2D_yaehf")

[node name="torch" type="PointLight2D" parent="player"]
color = Color(1, 1, 1, 0.69411767)
texture = ExtResource("18_82xsv")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 5
position = Vector2(563, 305)
zoom = Vector2(2, 2)

[node name="ui_bg" type="Sprite2D" parent="Camera2D"]
material = SubResource("CanvasItemMaterial_cegan")
position = Vector2(8.940697e-08, -170)
scale = Vector2(0.9999998, 0.6875)
texture = ExtResource("19_cegan")

[node name="healthbar_background" type="ColorRect" parent="Camera2D/ui_bg"]
z_index = 1
use_parent_material = true
offset_left = -313.00006
offset_top = -24.72728
offset_right = -261.00006
offset_bottom = -14.545456
color = Color(0.93339837, 0.6657975, 0.9526303, 1)

[node name="healthbar" type="ColorRect" parent="Camera2D/ui_bg"]
z_index = 2
use_parent_material = true
offset_left = -312.00006
offset_top = -23.272736
offset_right = -262.00006
offset_bottom = -16.45456
color = Color(0.9764706, 0.11764706, 0.11764706, 1)

[node name="energybar" type="ColorRect" parent="Camera2D/ui_bg"]
z_index = 2
use_parent_material = true
offset_left = -312.00006
offset_top = -8.72728
offset_right = -312.00006
offset_bottom = -2.181839
color = Color(0, 0.29411766, 1, 1)

[node name="energybar_background" type="ColorRect" parent="Camera2D/ui_bg"]
use_parent_material = true
offset_left = -313.00006
offset_top = -10.181824
offset_right = -261.00006
offset_bottom = -1.4545441

[node name="FadeTransition" type="ColorRect" parent="."]
offset_left = 217.0
offset_top = 88.0
offset_right = 913.0
offset_bottom = 522.0
color = Color(1, 1, 1, 0)
script = ExtResource("20_82xsv")
